--- a/backend/discovery-server/pom.xml
+++ b/backend/discovery-server/pom.xml
@@ -39,6 +39,11 @@
     <build>
         <pluginManagement>
         <plugins>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+			</plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -82,8 +87,5 @@
         </plugins>
         </pluginManagement>
     </build>
-
-
-
 
 </project>
