--- a/backend/gateway/src/main/resources/application.properties
+++ b/backend/gateway/src/main/resources/application.properties
@@ -23,11 +23,5 @@ zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 ribbon.eager-load.enabled=true
 # Actuator
 management.endpoints.web.exposure.include=health,routes
-# Disable Hystrix timeout globally (for all services)
-hystrix.command.default.execution.timeout.enabled=false
-# Disable Hystrix timeout for a single service
-hystrix.command.auth-service.execution.timeout.enabled=false
-# Increase the Hystrix timeout to 60s (globally)
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-# Increase the Hystrix timeout to 60s (per service)
-hystrix.command.<serviceName>.execution.isolation.thread.timeoutInMilliseconds=60000
+zuul.host.connect-timeout-millis=10000
+zuul.host.socket-timeout-millis=60000
